--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
     "chalk": "^5.0.1",
     "clear-any-console": "^1.16.2"
   },
-  "type": "module"
+  "type": "module",
+  "keywords": [
+    "saurabh shelar",
+    "saurabh",
+    "shelar",
+    "ishelar"
+  ]
 }
